# Text-Similarity-NLU-for-Android

./: README.md
Export_ONNX/: GTE_Export.py  GTE_config.py
Export_ONNX/modeling_modified/: modeling_bert.py
Text_Similarity_EN_ArmNN/app/libs/arm64-v8a/: read.txt
Text_Similarity_EN_ArmNN/app/src/main/cpp/: project.cpp  project.h
Text_Similarity_EN_ArmNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_MNN/app/src/main/cpp/: CMakeLists.txt
Text_Similarity_EN_MNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_NCNN/app/src/main/assets/: commands.txt
Text_Similarity_EN_NCNN/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_EN_NCNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_ONNX/app/src/main/: AndroidManifest.xml
Text_Similarity_EN_ONNX/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_EN_ONNX/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_Paddle/app/: build.gradle
Text_Similarity_EN_Paddle/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_EN_Paddle/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_Pytorch_Java/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_TFLite_C++/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_EN_TFLite_C++/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_EN_TFLite_Java/app/: build.gradle
Text_Similarity_EN_TFLite_Java/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_ArmNN/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_ZH_ArmNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_MNN/app/src/main/: AndroidManifest.xml
Text_Similarity_ZH_MNN/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_ZH_MNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_NCNN/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_ZH_NCNN/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_ONNX/app/: build.gradle
Text_Similarity_ZH_ONNX/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_ZH_ONNX/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_Paddle/app/: local.properties
Text_Similarity_ZH_Paddle/app/src/main/cpp/: CMakeLists.txt  project.cpp  project.h
Text_Similarity_ZH_Paddle/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_Pytorch_Java/app/: build.gradle
Text_Similarity_ZH_Pytorch_Java/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_TFLite_C++/app/src/main/assets/: commands.txt
Text_Similarity_ZH_TFLite_C++/app/src/main/cpp/: project.cpp  project.h
Text_Similarity_ZH_TFLite_C++/app/src/main/java/com/example/myapplication/: MainActivity.java
Text_Similarity_ZH_TFLite_Java/app/: build.gradle
Text_Similarity_ZH_TFLite_Java/app/src/main/java/com/example/myapplication/: MainActivity.java
